tests/snapshots/integration_tests__example_transformer_from_stdlib.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron BERT(vocab_size, d_model, num_layers, num_heads, d_ff):
  inputs:
    default: [batch, seq]
  outputs:
    default: [batch, seq, d_model]
  graph:
    in -> Embedding#7(vocab_size, d_model)
    Embedding#7(vocab_size, d_model) -> PositionalEncoding#8(d_model)
    PositionalEncoding#8(d_model) -> embedded
    embedded -> TransformerStack#9(num_layers, d_model, num_heads, d_ff)
    TransformerStack#9(num_layers, d_model, num_heads, d_ff) -> out

neuron BERTBase(vocab_size):
  inputs:
    default: [batch, seq]
  outputs:
    default: [batch, seq, 768]
  graph:
    in -> BERT#17(vocab_size, 768, 12, 12, 3072)
    BERT#17(vocab_size, 768, 12, 12, 3072) -> out

neuron GPT(vocab_size, d_model, num_layers, num_heads, d_ff, max_seq_len):
  inputs:
    default: [batch, seq]
  outputs:
    default: [batch, seq, vocab_size]
  context:
    @lazy layers = sequential(...)
  graph:
    in -> Embedding#1(vocab_size, d_model)
    Embedding#1(vocab_size, d_model) -> embedded
    embedded -> PositionalEncoding#2(d_model, max_len=max_seq_len)
    PositionalEncoding#2(d_model, max_len=max_seq_len) -> positioned
    positioned -> layers#3(d_model, num_heads, d_ff)
    layers#3(d_model, num_heads, d_ff) -> features
    features -> LayerNorm#4(d_model)
    LayerNorm#4(d_model) -> normalized
    normalized -> Linear#5(d_model, vocab_size)
    Linear#5(d_model, vocab_size) -> out

neuron GPT2Small(vocab_size):
  inputs:
    default: [batch, seq]
  outputs:
    default: [batch, seq, vocab_size]
  graph:
    in -> GPT#16(vocab_size, 768, 12, 12, 3072, 1024)
    GPT#16(vocab_size, 768, 12, 12, 3072, 1024) -> out

neuron MicroTransformer:
  inputs:
    default: [batch, seq]
  outputs:
    default: [batch, seq, 1000]
  graph:
    in -> Embedding#18(1000, 128)
    Embedding#18(1000, 128) -> PositionalEncoding#19(128, max_len=128)
    PositionalEncoding#19(128, max_len=128) -> TransformerBlock#20(128, 2, 512)
    TransformerBlock#20(128, 2, 512) -> TransformerBlock#21(128, 2, 512)
    TransformerBlock#21(128, 2, 512) -> LayerNorm#22(128)
    LayerNorm#22(128) -> Linear#23(128, 1000)
    Linear#23(128, 1000) -> out

neuron Seq2SeqTransformer(src_vocab, tgt_vocab, d_model, num_layers, num_heads):
  inputs:
    source: [batch, seq_src]
    target: [batch, seq_tgt]
  outputs:
    default: [batch, seq_tgt, tgt_vocab]
  graph:
    source -> Embedding#10(src_vocab, d_model)
    Embedding#10(src_vocab, d_model) -> PositionalEncoding#11(d_model)
    PositionalEncoding#11(d_model) -> TransformerStack#12(num_layers, d_model, num_heads, (d_model * 4))
    TransformerStack#12(num_layers, d_model, num_heads, (d_model * 4)) -> encoder_out
    target -> Embedding#13(tgt_vocab, d_model)
    Embedding#13(tgt_vocab, d_model) -> PositionalEncoding#14(d_model)
    PositionalEncoding#14(d_model) -> target_embedded

neuron TinyGPT(vocab_size):
  inputs:
    default: [batch, seq]
  outputs:
    default: [batch, seq, vocab_size]
  graph:
    in -> GPT#6(vocab_size, 256, 4, 4, 1024, 512)
    GPT#6(vocab_size, 256, 4, 4, 1024, 512) -> out

neuron TokenEmbedding(vocab_size, d_model):
  inputs:
    default: [batch, seq]
  outputs:
    default: [batch, seq, d_model]
  graph:
    in -> Embedding#0(vocab_size, d_model)
    Embedding#0(vocab_size, d_model) -> out

neuron VisionTransformer(image_size, patch_size, num_classes, d_model, num_layers, num_heads):
  inputs:
    default: [batch, channels, height, width]
  outputs:
    default: [batch, num_classes]
  graph:
    in -> Linear#15(((channels * height) * width), num_classes)
    Linear#15(((channels * height) * width), num_classes) -> out
