tests/snapshots/integration_tests__example_transformer_from_stdlib_error.snap
---
source: tests/integration_tests.rs
expression: error_text
---
Parse error: Unexpected { found: "Ident(\"let\")", span: SourceSpan { offset: SourceOffset(875), length: 3 } }
