tests/snapshots/integration_tests__example_tutorials_02_fork_join.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Add:
  inputs:
    left: [*shape]
    right: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,builtin/Add

neuron Concat:
  inputs:
    *inputs: [*shape]
  outputs:
    default: [*shape_out]
  impl:
    Source: core,builtin/Concat

neuron Fork:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
  impl:
    Source: core,builtin/Fork

neuron Fork3:
  inputs:
    default: [*shape]
  outputs:
    a: [*shape]
    b: [*shape]
    c: [*shape]
  impl:
    Source: core,builtin/Fork3

neuron GELU:
  inputs:
    default: [*shape]
  outputs:
    default: [*shape]
  impl:
    Source: core,activations/GELU

neuron LayerNorm(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  impl:
    Source: core,normalization/LayerNorm

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*, in_dim]
  outputs:
    default: [*, out_dim]
  impl:
    Source: core,nn/Linear

neuron NestedResidual(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (outer_main, outer_skip)
    outer_main -> (inner_main, inner_skip)
    inner_main -> Linear#9(dim, dim)
    Linear#9(dim, dim) -> inner_processed
    (inner_processed, inner_skip) -> Add#10()
    Add#10() -> inner_sum
    (inner_sum, outer_skip) -> Add#11()
    Add#11() -> out

neuron ParallelProcessing(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, (dim * 3)]
  graph:
    in -> (path1, path2, path3)
    path1 -> Linear#5(dim, dim)
    Linear#5(dim, dim) -> p1
    path2 -> Linear#6(dim, dim)
    Linear#6(dim, dim) -> p2
    path3 -> Linear#7(dim, dim)
    Linear#7(dim, dim) -> p3
    (p1, p2, p3) -> Concat#8()
    Concat#8() -> out

neuron PreActivationResidual(dim):
  inputs:
    default: [batch, dim]
  outputs:
    default: [batch, dim]
  graph:
    in -> (main, skip)
    main -> LayerNorm#12(dim)
    LayerNorm#12(dim) -> Linear#13(dim, (dim * 4))
    Linear#13(dim, (dim * 4)) -> GELU#14()
    GELU#14() -> Linear#15((dim * 4), dim)
    Linear#15((dim * 4), dim) -> processed
    (processed, skip) -> Add#16()
    Add#16() -> out

neuron ResidualBlock(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (main, skip)
    main -> Linear#1(dim, (dim * 4))
    Linear#1(dim, (dim * 4)) -> GELU#2()
    GELU#2() -> Linear#3((dim * 4), dim)
    Linear#3((dim * 4), dim) -> processed
    (processed, skip) -> Add#4()
    Add#4() -> out

neuron SimpleFork:
  inputs:
    default: [*, dim]
  outputs:
    a: [*, dim]
    b: [*, dim]
  impl:
    Source: core,builtin/Fork

neuron ThreeWayFork:
  inputs:
    default: [*, dim]
  outputs:
    a: [*, dim]
    b: [*, dim]
    c: [*, dim]
  impl:
    Source: core,builtin/Fork3

neuron UnpackExample(dim):
  inputs:
    default: [*, dim]
  outputs:
    default: [*, dim]
  graph:
    in -> (main, skip)
    main -> Linear#0(dim, dim)
    Linear#0(dim, dim) -> out
