tests/snapshots/integration_tests__example_unroll_gpt2.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron Embedding(vocab_size, d_model):
  inputs:
    default: [*shape]
  outputs:
    default: [*shape, d_model]
  impl:
    Source: core,nn/Embedding

neuron GPT2Small(vocab_size = 50257, d_model = 768, num_layers = 12):
  inputs:
    default: [*, seq]
  outputs:
    default: [*, seq, vocab_size]
  context:
    embed = Embedding(...)
    ln_f = LayerNorm(...)
    head = Linear(...)
  graph:
    in -> embed
    embed -> e
    e -> unroll(num_layers): -> block -> mid
    mid -> ln_f
    ln_f -> head
    head -> out

neuron LayerNorm(dim):
  inputs:
    default: [*shape, dim]
  outputs:
    default: [*shape, dim]
  impl:
    Source: core,normalization/LayerNorm

neuron Linear(in_dim, out_dim):
  inputs:
    default: [*shape, in_dim]
  outputs:
    default: [*shape, out_dim]
  impl:
    Source: core,nn/Linear

neuron TransformerBlock(d_model):
  inputs:
    default: [*, seq, d_model]
  outputs:
    default: [*, seq, d_model]
  impl:
    Source: core,transformer/TransformerBlock
