tests/snapshots/integration_tests__example_unroll_static.snap
---
source: tests/integration_tests.rs
expression: formatted
---
=== Neurons ===

neuron SharedLayers(d_model, num_heads, d_ff, num_layers = 3):
  inputs:
    default: [*, seq, d_model]
  outputs:
    default: [*, seq, d_model]
  graph:
    in -> unroll(num_layers): -> block -> out
